trying to fix overflow

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -2737,9 +2737,15 @@
   body{
     /* border: 5px solid yellow; */
     overflow-x: hidden;
+    width: 100%;
   }
+
+  .hero_bg{
+    width: 100%;
+  }
+
   .hero_content_wrapper {
-    max-width: 400px;
+
     /* border: 3px solid pink; */
     /* min-height: 800px; */
     align-items: flex-start;
